fix: overflow in textinput in export dialog

--- a/src/components/ExportDialog.scss
+++ b/src/components/ExportDialog.scss
@@ -34,6 +34,9 @@
 
     .TextInput {
       height: calc(1rem - 3px);
+      max-width: 200px;
+      overflow: hidden;
+      text-align: center;
 
       &--readonly {
         background: none;
